# Trainingtracker

./: .gitignore  .trainingtracker.example.json  Cargo.toml  README.md  db.json
src/: main.rs
