[package]
name = "sporttracker"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]
description = "A simple sports tracker/planer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["local-offset", "serde", "macros"] }
json_store_rs = { git = "https://github.com/JonasFocke01/json_store_rs.git" }
